ci/wix-packaging/cloudformation-template.yml
Description: Infrastructure for wix-packaging VM
AWSTemplateFormatVersion: "2010-09-09"
Resources:
  VolumeForCompileInstance:
    Type: "AWS::EC2::Volume"
    Properties:
      AvailabilityZone: us-west-2b
      Size: '30'
      VolumeType: gp2
      Tags:
      - Key: Name
        Value: windows-server-2016-with-wix-packaging-volume
      - Key: deployment
        Value: pa-toolsmiths
  OnlyIntranetSsh:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: ssh local only
      VpcId: vpc-8d40cfe9 # ORE5
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22  # SSH
        ToPort: 22
        CidrIp: 10.0.0.0/8
      - IpProtocol: tcp
        FromPort: 3389  # RDP
        ToPort: 3389
        CidrIp: 10.0.0.0/8
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 22  # SSH
        ToPort: 22
        CidrIp: 10.0.0.0/8
      - IpProtocol: tcp
        FromPort: 80  # HTTP
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443  # HTTPS
        ToPort: 443
        CidrIp: 0.0.0.0/0
  WixPackaging:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-27b81547 # Name: wix-packaging-11-16-2016
      AvailabilityZone: us-west-2b
      InstanceType: t2.micro
      KeyName: Wix-packaging
      SubnetId: subnet-b1f977d5 # ORE5-Concourse
      Tags:
      - Key: Name
        Value: wix-packaging
      - Key: deployment
        Value: pa-toolsmiths
      SecurityGroupIds:
      - !Ref OnlyIntranetSsh
  MountPoint:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      InstanceId: !Ref WixPackaging
      VolumeId: !Ref VolumeForCompileInstance
      Device: /dev/sdh
  DNSRecord:
    Type: "AWS::Route53::RecordSet"
    Properties:
      HostedZoneName: "ci.eng.pivotal.io."
      Comment: "wix-packaging DNS record"
      Name: "wix-packaging.ci.eng.pivotal.io."
      Type: "A"
      TTL: "300"
      ResourceRecords:
        - Fn::GetAtt:
            - "WixPackaging"
            - "PrivateIp"
